<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2D5DB"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="27dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btConsulta"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="16dp"
                android:onClick="onClick"
                android:text="@string/btn_consultarUser" />

            <Button
                android:id="@+id/btnRegistro"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="28dp"
                android:onClick="onClick"
                android:text="@string/btn_registrar" />

            <Button
                android:id="@+id/conSpinner"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/btn_consultars" />

            <Button
                android:id="@+id/conListView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="20dp"
                android:onClick="onClick"
                android:text="@string/btn_consultarl" />

            <Button
                android:id="@+id/btnRegistrarMascota"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="72dp"
                android:onClick="onClick"
                android:text="Registrar Mascota" />

            <Button
                android:id="@+id/btnListaMascotas"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginLeft="92dp"
                android:layout_marginTop="8dp"
                android:onClick="onClick"
                android:text="Lista de Mascotas" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>